--- a/ProjectRubberDucky/RemoteConfigDefaults.plist
+++ b/ProjectRubberDucky/RemoteConfigDefaults.plist
@@ -6,33 +6,12 @@
 	<string>true</string>
 	<key>homeTabFeatureFlag</key>
 	<string>true</string>
+	<key>subscribedTabFeatureFlag</key>
+	<string>false</string>
+	<key>libraryTabFeatureFlag</key>
+	<string>false</string>
 	<key>loginContent</key>
-	<string>{
-  &quot;entityName&quot;: &quot;loginContent&quot;,
-  &quot;version&quot;: &quot;0.1&quot;,
-  &quot;content&quot;: [
-    {
-      &quot;id&quot;: &quot;pageTitle&quot;,
-      &quot;description&quot;: &quot;-&quot;
-    },
-    {
-      &quot;id&quot;: &quot;sectionHeader1&quot;,
-      &quot;description&quot;: &quot;-&quot;
-    },
-    {
-      &quot;id&quot;: &quot;sectionHeader2&quot;,
-      &quot;description&quot;: &quot;-&quot;
-    },
-    {
-      &quot;id&quot;: &quot;primaryAction&quot;,
-      &quot;description&quot;: &quot;-&quot;
-    },
-    {
-      &quot;id&quot;: &quot;secondaryAction&quot;,
-      &quot;description&quot;: &quot;-&quot;
-    }
-  ]
-}</string>
+	<string>{&quot;entityName&quot;:&quot;loginContent&quot;,&quot;version&quot;:&quot;0.1&quot;,&quot;content&quot;:[{&quot;id&quot;:&quot;pageTitle&quot;,&quot;description&quot;:&quot;Login&quot;},{&quot;id&quot;:&quot;sectionHeader1&quot;,&quot;description&quot;:&quot;Email&quot;},{&quot;id&quot;:&quot;sectionHeader2&quot;,&quot;description&quot;:&quot;Password&quot;},{&quot;id&quot;:&quot;primaryAction&quot;,&quot;description&quot;:&quot;Sign in with Email&quot;},{&quot;id&quot;:&quot;secondaryAction&quot;,&quot;description&quot;:&quot;Not a member yet?&quot;}]}</string>
 	<key>registerContent</key>
 	<string>{&quot;entityName&quot;:&quot;registerContent&quot;,&quot;version&quot;:&quot;0.1&quot;,&quot;cacheable&quot;:true,&quot;content&quot;:[{&quot;id&quot;:&quot;pageTitle&quot;,&quot;description&quot;:&quot;Register&quot;},{&quot;id&quot;:&quot;sectionHeader1&quot;,&quot;description&quot;:&quot;Email&quot;},{&quot;id&quot;:&quot;sectionHeader2&quot;,&quot;description&quot;:&quot;Password&quot;},{&quot;id&quot;:&quot;primaryAction&quot;,&quot;description&quot;:&quot;Register&quot;}]}</string>
 </dict>
