--- a/ProjectRubberDucky/RemoteConfigDefaults.plist
+++ b/ProjectRubberDucky/RemoteConfigDefaults.plist
@@ -2,21 +2,25 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>settingsTabFeatureFlag</key>
-	<string>true</string>
-	<key>homeTabFeatureFlag</key>
-	<string>true</string>
-	<key>subscribedTabFeatureFlag</key>
-	<string>false</string>
-	<key>libraryTabFeatureFlag</key>
-	<string>false</string>
-	<key>featuredVideoContent</key>
-	<string>{&quot;entityName&quot;:&quot;registerContent&quot;,&quot;version&quot;:&quot;0.1&quot;,&quot;cacheable&quot;:true,&quot;content&quot;:[{&quot;id&quot;:&quot;0&quot;,&quot;description&quot;:&quot;Mountains&quot;},{&quot;id&quot;:&quot;1&quot;,&quot;description&quot;:&quot;Ocean&quot;},{&quot;id&quot;:&quot;2&quot;,&quot;description&quot;:&quot;Beaches&quot;},{&quot;id&quot;:&quot;3&quot;,&quot;description&quot;:&quot;Clouds&quot;},{&quot;id&quot;:&quot;4&quot;,&quot;description&quot;:&quot;Space&quot;}]}</string>
-	<key>loginContent</key>
-	<string>{&quot;entityName&quot;:&quot;loginContent&quot;,&quot;version&quot;:&quot;0.1&quot;,&quot;content&quot;:[{&quot;id&quot;:&quot;pageTitle&quot;,&quot;description&quot;:&quot;Login&quot;},{&quot;id&quot;:&quot;sectionHeader1&quot;,&quot;description&quot;:&quot;Email&quot;},{&quot;id&quot;:&quot;sectionHeader2&quot;,&quot;description&quot;:&quot;Password&quot;},{&quot;id&quot;:&quot;primaryAction&quot;,&quot;description&quot;:&quot;Sign in with Email&quot;},{&quot;id&quot;:&quot;secondaryAction&quot;,&quot;description&quot;:&quot;Not a member yet?&quot;}]}</string>
-	<key>registerContent</key>
-	<string>{&quot;entityName&quot;:&quot;registerContent&quot;,&quot;version&quot;:&quot;0.1&quot;,&quot;cacheable&quot;:true,&quot;content&quot;:[{&quot;id&quot;:&quot;pageTitle&quot;,&quot;description&quot;:&quot;Register&quot;},{&quot;id&quot;:&quot;sectionHeader1&quot;,&quot;description&quot;:&quot;Email&quot;},{&quot;id&quot;:&quot;sectionHeader2&quot;,&quot;description&quot;:&quot;Password&quot;},{&quot;id&quot;:&quot;primaryAction&quot;,&quot;description&quot;:&quot;Register&quot;}]}</string>
-	<key>homeContent</key>
-	<string>{&quot;entityName&quot;:&quot;homeContent&quot;,&quot;version&quot;:&quot;0.1&quot;,&quot;cacheable&quot;:true,&quot;content&quot;:[{&quot;id&quot;:&quot;pageTitle&quot;,&quot;description&quot;:&quot;Home&quot;}]}</string>
+  <key>settingsTabFeatureFlag</key>
+  <string>true</string>
+  <key>homeTabFeatureFlag</key>
+  <string>true</string>
+  <key>subscribedTabFeatureFlag</key>
+  <string>false</string>
+  <key>libraryTabFeatureFlag</key>
+  <string>false</string>
+  <key>featuredVideoContent</key>
+  <string>{"entityName":"registerContent","version":"0.1","cacheable":true,"content":[{"id":"0","description":"Mountains"},{"id":"1","description":"Ocean"},{"id":"2","description":"Beaches"},{"id":"3","description":"Clouds"},{"id":"4","description":"Space"}]}</string>
+  <key>loginContent</key>
+  <string>{"entityName":"loginContent","version":"0.1","content":[{"id":"pageTitle","description":"Login"},{"id":"sectionHeader1","description":"Email"},{"id":"sectionHeader2","description":"Password"},{"id":"primaryAction","description":"Sign in with Email"},{"id":"secondaryAction","description":"Not a member yet?"}]}</string>
+  <key>registerContent</key>
+  <string>{"entityName":"registerContent","version":"0.1","cacheable":true,"content":[{"id":"pageTitle","description":"Register"},{"id":"sectionHeader1","description":"Email"},{"id":"sectionHeader2","description":"Password"},{"id":"primaryAction","description":"Register"}]}</string>
+  <key>homeContent</key>
+  <string>{"entityName":"homeContent","version":"0.1","cacheable":true,"content":[{"id":"pageTitle","description":"Home"}]}</string>
+  <key>settingsContent</key>
+  <string>{"entityName":"settingsContent","version":"0.1","cacheable":true,"content":[{"id":"pageTitle","description":"Settings"},{"id":"logoutText","description":"Log out"},{"id":"logoutAlertTitle","description":"Log out"},{"id":"logoutAlertMessage","description":"Are you sure you would like to log out of your account?"},{"id":"logoutAlertPrimaryActionText","description":"Cancel"},{"id":"logoutAlertSecondaryActionText","description":"Log out"}]}</string>
+  <key>accountContent</key>
+  <string>{"entityName":"accountContent","version":"0.1","cacheable":true,"content":[{"id":"pageTitle","description":"Account"},{"id":"sectionHeader1","description":"Email"},{"id":"sectionHeader2","description":"Password"},{"id":"deleteText","description":"Delete account"},{"id":"deleteAccountAlertTitle","description":"Delete account"},{"id":"deleteAccountAlertMessage","description":"Are you sure you would like to delete your account?"},{"id":"deleteAccountAlertPrimaryActionText","description":"Cancel"},{"id":"deleteAccountAlertSecondaryActionText","description":"Delete"}]}</string>
 </dict>
 </plist>
